examples/negative/effects_phase2/cancel_unknown_op.kai
# Negative fixture (#520 / effects phase 2): `Cancel` is the
# cooperative-cancellation effect from `docs/effects-stdlib.md`.
# Per the catalog it does NOT expose a `cancel` op; it exposes
# `check` (cooperative check) and the runtime delivers cancellation
# at handler boundaries. Calling `Cancel.cancel()` must be
# rejected with "unknown op".

fn main() : Int = {
  Cancel.cancel()
  0
}
